2020-02-21  7.0.9-25 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-25, GIT revision 16931:2a56db8:20200221

2020-02-18  7.0.9-25 Cristy  <quetzlzacatenango@image...>
  * Adapt to a change in command-line options in the SVG inkscape delegate.
  * No percent sign in lab() color.
  * Introducing the -color-threshold command-line option.

2020-02-17  7.0.9-24 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-24, GIT revision 16919:41efef9de:20200217

2020-02-15  7.0.9-24 Cristy  <quetzlzacatenango@image...>
  * Support connected-components:eccentricity-threshold,
    connected-components:major-axis-threshold,
    connected-components:minor-axis-threshold,
    connected-components:angle-threshold.
  * Set the alpha channel if the write mask is not enabled.
  * Corrected ellipse orientation when computing image moments.

2020-02-14  7.0.9-23 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-23, GIT revision 16884:acb56cd:20200214

2020-02-08  7.0.9-23 Cristy  <quetzlzacatenango@image...>
  * Report gray(127.5) as gray(50%).
  * Support -define connected-components:perimeter-threshold=min-max

2020-02-07  7.0.9-22 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-22, GIT revision 16855:8733f3e:20200207

2020-02-03  7.0.9-22 Cristy  <quetzlzacatenango@image...>
  * More work on connect components, e.g. keep-colors, remove-colors,
    keep-topids.
  * Initialize mutex before locking if its not already initialized.
  * Support 24-bit TIFF images.

2020-02-01  7.0.9-21 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.9-21, GIT revision 16823:290cb93:20200201.

2020-01-27  7.0.9-21 Cristy  <quetzlzacatenango@image...>
  * Support additional connected components defines.
  * Refresh cache morphology when writing MPC images.

2020-01-26  7.0.9-19 Cristy  <quetzlzacatenango@image...>